<resources>
    <string name="app_name">TP1</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="birth">Birth</string>
    <string name="birth_select">Select a date ..</string>
    <string name="birth_town">Birth Town</string>
    <string name="department">Department</string>
    <string name="submit">Submit</string>
    <string name="reset_action">Reset Action</string>
    <string name="call">Call</string>
    <string name="delete">Delete</string>
    <string name="get_info">Get information</string>
</resources>