<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#9C27B0"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        android:paddingTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:text="@string/first_name"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#673AB7"
                android:textDirection="ltr"
                android:textSize="20sp"
                app:autoSizeTextType="none" />

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#673AB7"
                android:contentDescription="@string/first_name"
                android:ems="10"
                android:foregroundTint="#3F51B5"
                android:inputType="textPersonName"
                android:textColor="#000000"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#673AB7"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#673AB7"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/birth"
                android:textColor="#9C27B0"
                android:textSize="20sp" />

            <Button
                android:id="@+id/date"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:background="#00D4D4D4"
                android:hint="@string/birth_select"
                android:textColor="#000000"
                android:textColorHint="#9C27B0"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#9C27B0"
                android:text="@string/birth_town"
                android:textColor="#9C27B0"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editBirthTown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#9C27B0"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/department"
                android:textColor="#9C27B0"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerDepartment"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#9C27B0"
                android:entries="@array/departments" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Phone"
                android:textColor="#9C27B0"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="phone" />

                <Button
                    android:id="@+id/buttonPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#9C27B0"
                    android:text="add a phone" />

                <ListView
                    android:id="@+id/phoneList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawSelectorOnTop="false"
                    android:entries="@array/phone" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>



    <Button
        android:id="@+id/showPopupBtn"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#8BC34A"
        android:insetTop="20dp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>